trunk/Archive2/c4/24ae381e0d8651/output
main.cpp:11:66: error: comparing floating point with == or != is unsafe [-Werror,-Wfloat-equal]
                                                   decltype(left == right)* = 0);
                                                            ~~~~ ^  ~~~~~
main.cpp:31:52: note: in instantiation of template class 'supports_equality_operator<double, double>' requested here
    std::cout << "supports equality operator: " << supports_equality_operator<double>::value << std::endl;
                                                   ^
1 error generated.
